# Finance_news_summarizer

./: Notes  README.md  assetsummaries.csv  main.py  pyproject.toml
